crates/aven-check/tests/fixtures/check/invalid/call-arg-arity-expression.av
f : (Text) -> Int
f = (x) => { text: x, value: 1 }.value
add : (Int, Int) -> Int
add = (left, right) => left + right
result : Int = add(f(42))
